syntax = "proto3";
package moxnotify.client;

import "types.proto";

service ClientService {
    rpc Notify (ClientNotifyRequest) returns (stream moxnotify.types.NotificationMessage);
    rpc NotificationClosed (ClientNotificationClosedRequest) returns (ClientNotificationClosedResponse);
}

message ClientNotifyRequest {}

message ClientNotificationClosedRequest {
    moxnotify.types.NotificationClosed notification_closed = 1;
}

message ClientNotificationClosedResponse {}
